--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
 
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
