--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".VotingPage"></activity>
         <activity android:name=".TestActivity" />
         <activity android:name=".VotingsActivity" />
         <activity android:name=".MainActivity">
